<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBackground"
    tools:context=".SettingsActivity">

    <ImageButton
        android:id="@+id/timerButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/settings_button"
        android:src="@drawable/light_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/breakLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/break_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/breakStatusView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="136dp"
        android:text="@string/break_status_view"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/breakSeekBar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/workStatusView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/work_status_view"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/workSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/workDescriptionLabel" />

    <TextView
        android:id="@+id/breakDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/break_description_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakLabel" />

    <TextView
        android:id="@+id/workDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/work_description_label"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workLabel" />

    <TextView
        android:id="@+id/themeDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/theme_description_label"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themeLabel" />

    <TextView
        android:id="@+id/workLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:text="@string/work_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakDescriptionLabel" />

    <TextView
        android:id="@+id/themeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:text="@string/theme_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workDescriptionLabel" />

    <SeekBar
        android:id="@+id/breakSeekBar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:max="59"
        android:progress="5"
        android:progressTint="@color/lightPrimary"
        android:scrollbarSize="10dp"
        android:thumbTint="@color/lightPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakDescriptionLabel" />

    <SeekBar
        android:id="@+id/workSeekBar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:max="59"
        android:progress="25"
        android:progressTint="@color/lightPrimary"
        android:thumbTint="@color/lightPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workDescriptionLabel" />

    <RadioGroup
        android:id="@+id/themeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="203dp"
        android:layout_marginLeft="203dp"
        android:layout_marginRight="203dp"
        android:layout_marginStart="203dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themeDescriptionLabel">

        <RadioButton
            android:id="@+id/lightThemeRadioButton"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/lightPrimary"
            android:checked="true"
            android:text="@string/light_theme_label"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/darkThemeRadioButton"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/lightPrimary"
            android:text="@string/dark_theme_label"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>