<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBackground"
    tools:context=".OrgmodoroActivity">

    <ProgressBar
        android:id="@+id/countdownProgressBar"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="229dp"
        android:layout_height="235dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="100"
        android:progressDrawable="@drawable/progress_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/startPauseButton"
        android:layout_width="105dp"
        android:layout_height="34dp"
        android:layout_marginEnd="255dp"
        android:layout_marginStart="254dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/start_status_label"
        android:textColor="@color/lightText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countdownProgressBar" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginEnd="255dp"
        android:layout_marginStart="254dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/cancel_label"
        android:textColor="@color/lightText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startPauseButton" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/settings_button"
        android:src="@drawable/light_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countdownTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:text="@string/countdown_time"
        android:textColor="@color/lightText"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/countdownProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/countdownProgressBar"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/countdownProgressBar"
        app:layout_constraintTop_toTopOf="@+id/countdownProgressBar"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>